--- a/app/views/blocks/header.jade
+++ b/app/views/blocks/header.jade
@@ -1,24 +1,23 @@
 header
-  .container-fruit
-    nav.navbar
-      .container
-        .navbar-header
-          button.navbar-toggle.collapsed(type='button', data-toggle='collapse', data-target='#navbar', aria-expanded='false', aria-controls='navbar')
-            span.sr-only Toggle navigation
-            span.icon-bar
-            span.icon-bar
-            span.icon-bar
-          a(href='/index.html')
-            img(src='images/spa-logo.png', alt='spa-logo')
-        #navbar.collapse.navbar-collapse
-          ul.nav.navbar-nav
-            li.active
-              a(href='/index.html') TRANG CHỦ
-            li
-              a(href='/about.html') GIỚI THIỆU
-            li
-              a(href='/facelifts.html') CĂNG DA MẶT
-            li
-              a(href='/beauty-secrets.html') BÍ QUYẾT LÀM ĐẸP
-            li
-              a(href='/contact.html') LIÊN HỆ
+  nav.navbar(data-sticky)
+    .container
+      .navbar-header
+        button.navbar-toggle.collapsed(type='button', data-toggle='collapse', data-target='#navbar', aria-expanded='false', aria-controls='navbar')
+          span.sr-only Toggle navigation
+          span.icon-bar
+          span.icon-bar
+          span.icon-bar
+        a(href='/index.html')
+          img(src='images/spa-logo.png', alt='spa-logo')
+      #navbar.collapse.navbar-collapse
+        ul.nav.navbar-nav
+          li.active
+            a(href='/index.html') TRANG CHỦ
+          li
+            a(href='/about.html') GIỚI THIỆU
+          li
+            a(href='/facelifts.html') CĂNG DA MẶT
+          li
+            a(href='/beauty-secrets.html') BÍ QUYẾT LÀM ĐẸP
+          li
+            a(href='/contact.html') LIÊN HỆ
