--- a/app/views/layouts/layout.jade
+++ b/app/views/layouts/layout.jade
@@ -27,7 +27,7 @@ html(class="no-js", lang="en")
     block script
   body(class=bodyClass)
     .container-fruit
-      img.img-responsive(src='images/img-home/img-home-banne.png', alt='banner page')
+      img.img-responsive(src='images/img-home/img-home-banne.png', alt='banner page', width="1903px")
     include ../blocks/header
     main: .container
       block container
