--- a/app/styles/blocks/contact-content.scss
+++ b/app/styles/blocks/contact-content.scss
@@ -1,6 +1,6 @@
 .top-content {
     .contact-block {
-        margin-bottom: 10px;
+        margin-bottom: 40px;
         .image-block {
             float: left;
             margin-right: 22px;
@@ -35,6 +35,21 @@
             left: 0;
             margin: 0;
             padding: 0;
+        }
+    }
+}
+
+@media #{$screen-xs-only} {
+    .top-content {
+        .contact-block {
+            text-align: center;
+            .image-block {
+                width: 100%;
+                margin: 0;
+            }
+            .text-box {
+                width: 100%;
+            }
         }
     }
 }
