--- a/app/views/blocks/beauty-secrets-content.jade
+++ b/app/views/blocks/beauty-secrets-content.jade
@@ -18,7 +18,7 @@
         i.arow-icon
         | PHẠM HƯƠNG GIỮ DÁNG CHUẨN TRƯỚC "GIỜ G" NHƯ THẾ NÀO?
       p Ngay sau khi đăng quang ngôi vị cao nhất của cuộc thi Hoa hậu Hoàn vũ Việt Nam 2015, Phạm Hương được coi là một trong những hoa hậu được nhiều người thừa nhận nhất về nhan sắc và khí chất hơn người. Thần thái sắc sảo, rạng ngời, mọi đường nét khuôn mặt đều hài hòa, ưu tú, cùng nụ cười rộng cực sang biến Phạm Hương trở thành ứng cử viên nặng kí cho những ngôi vị cao nhất tại cuộc thi Hoa hậu Hoàn vũ thế giới sẽ diễn ra vào cuối tháng 12/2015 tại thành phố Las Vegas, Mỹ.<br/>Vẻ đẹp rạng ngời, sắc nét hoàn hảo khiến nhiều người không thể rời mắt của Phạm Hương.
-    .col-md-4.hidden-xs
+    .col-md-4.hidden-xs.hidden-sm
       h4
         i.arow-icon
         | GỬI CÂU HỎI TƯ VẤN
