--- a/app/views/blocks/breadcrumb.jade
+++ b/app/views/blocks/breadcrumb.jade
@@ -1,4 +1,4 @@
 ol.breadcrumb.visible-md-up
-  li: +link({title: 'INPI.fr'})
-  li: +link({title: 'Comprendre la PI'})
-  li.active Indications géographiques
+  li: +link({title: 'Home'})
+  li: +link({title: 'item'})
+  li.active itemActive
