--- a/app/views/blocks/footer.jade
+++ b/app/views/blocks/footer.jade
@@ -10,7 +10,7 @@ footer.main-footer.hidden-print
           .image-slide-block.col-md-4.col-xs-3
             img.img-circle(src='images/img-slide-footer.png', alt='img-slide-footer')
           .slide-text.col-md-8.col-xs-9
-            .text-block.idea-text.visible-xs
+            .text-block.idea-text.visible-xs.visible-sm
               p  Ý KIẾN KHÁCH HÀNG
             h3   Trần Thị Hoài An
             p    Tinh dầu là một trong những loại tinh dầu thiên nhiên được chiết xuất hoàn
