--- a/app/styles/blocks/footer.scss
+++ b/app/styles/blocks/footer.scss
@@ -159,6 +159,12 @@
             margin: 0 auto;
         }
     }
+    .main-footer .idea-customer .slide-footer .slide-text {
+        padding-left: 60px;
+    }
+    .main-footer .idea-customer .slide-footer .single-slick .slick-dots {
+        top: 220px;
+    }
 }
 
 @media #{$screen-xs-only} {
