--- a/app/views/blocks/contact-content.jade
+++ b/app/views/blocks/contact-content.jade
@@ -9,7 +9,7 @@
       .col-md-6.col-xs-12.contact-block
         div
           .image-block
-            img(class='img-circle', src='images/img-ct/img-ct02.png', alt='tru so')
+            img.image-hover(class='img-circle', src='images/img-ct/img-ct02.png', alt='tru so')
           .text-block.text-left
             i Cơ sở chính:
             p 559-561 Trần Hưng Đạo, P.Cầu Kho, Q.1. HCM
@@ -17,7 +17,7 @@
       .col-md-6.col-xs-12.contact-block
         div
           .image-block
-            img(class='img-circle', src='images/img-ct/img-ct02.png', alt='tru so')
+            img.image-hover(class='img-circle', src='images/img-ct/img-ct02.png', alt='tru so')
           .text-block.text-left
             i Chi nhánh Hà Nội:
             p 135-137 Bùi Thị Xuân, Quận Hai Bà Trưng, Hà Nội
@@ -26,7 +26,7 @@
       .col-md-6.col-xs-12.contact-block
         div
           .image-block
-            img(class='img-circle', src='images/img-ct/img-ct02.png', alt='tru so')
+            img.image-hover(class='img-circle', src='images/img-ct/img-ct02.png', alt='tru so')
           .text-block.text-left
             i Chi nhánh Vũng Tàu:
             p 227A Lê Hồng Phong, P.8, TP.Vũng Tàu
@@ -34,7 +34,7 @@
       .col-md-6.col-xs-12.contact-block
         div
           .image-block
-            img(class='img-circle', src='images/img-ct/img-ct02.png', alt='tru so')
+            img.image-hover(class='img-circle', src='images/img-ct/img-ct02.png', alt='tru so')
           .text-block.text-left
             i Chi nhánh Cần Thơ:
             p 357 đường 30/4, P.Hưng Lợi, Q.Ninh Kiều, TP.Cần Thơ
