--- a/app/views/blocks/header.jade
+++ b/app/views/blocks/header.jade
@@ -8,7 +8,7 @@ header
           span.icon-bar
           span.icon-bar
         a(href='/index.html')
-          img(src='images/spa-logo.png', alt='spa-logo')
+          img.img-responsive(src='images/spa-logo.png', alt='spa-logo')
       #navbar.collapse.navbar-collapse
         ul.nav.navbar-nav
           li.active
@@ -31,23 +31,23 @@ header
         img.first-slide(src='images/img-home/img-home-banne.png', alt='First slide')
         .container
           .carousel-caption
-            h1.text-left CĂNG DA MẶT
-            p.text-left.hiden-xs.hiden-sm Trang thiết bị tối tân,không gian là sự hòa quyện giữ vẻ lãng mạn,sang trọng
+            h1 CĂNG DA MẶT
+            p.hidden-xs.hidden-sm Trang thiết bị tối tân,không gian là sự hòa quyện giữ vẻ lãng mạn,sang trọng
               | của phong cách Pháp và cảm giác ấm cũng như ở nhà, cùng không gian xanh mang hơi thở của thiên nhiên ngay giữa lòng thành phố.
       .item
         img.second-slide(src='images/cangdamat-header-image.png', alt='Second slide')
         .container
           .carousel-caption
-            h1.text-left CĂNG DA MẶT
-            p.text-left.hiden-xs.hiden-sm Trang thiết bị tối tân,không gian là sự hòa quyện giữ vẻ lãng mạn,sang trọng
+            h1 CĂNG DA MẶT
+            p.hidden-xs.hidden-sm Trang thiết bị tối tân,không gian là sự hòa quyện giữ vẻ lãng mạn,sang trọng
               | của phong cách Pháp và cảm giác ấm cũng như ở nhà, cùng không gian xanh mang hơi thở của thiên nhiên ngay giữa lòng thành phố.    
       .item
         img.third-slide(src='images/img-ct/img-ct01.png', alt='Third slide')
          
         .container
           .carousel-caption
-            h1.text-left CĂNG DA MẶT
-            p.text-left.hiden-xs.hiden-sm Trang thiết bị tối tân,không gian là sự hòa quyện giữ vẻ lãng mạn,sang trọng
+            h1 CĂNG DA MẶT
+            p.hidden-xs.hidden-sm Trang thiết bị tối tân,không gian là sự hòa quyện giữ vẻ lãng mạn,sang trọng
               | của phong cách Pháp và cảm giác ấm cũng như ở nhà, cùng không gian xanh mang hơi thở của thiên nhiên ngay giữa lòng thành phố.    
     a.left.carousel-control(href='#myCarousel', role='button', data-slide='prev')
       span.glyphicon.glyphicon-chevron-left(aria-hidden='true')
