--- a/app/styles/blocks/header.scss
+++ b/app/styles/blocks/header.scss
@@ -5,14 +5,7 @@
     opacity: 0.7;
     margin-bottom: 0;
     border: none;
-    // position: absolute;
-    // top: 27px;
     width: 100%;
-    .navbar-header {
-        img {
-            max-height: 70px;
-        }
-    }
     .navbar-nav {
         margin-left: 87px;
         li {
@@ -33,16 +26,12 @@
 }
 
 .navbar-toggle {
-    margin: 20px 0;
     .icon-bar {
         background-color: $black;
     }
 }
 
 .carousel-caption {
-    top: 207px;
-    left: 40%;
-    width: 665px;
     text-shadow: initial;
     h1 {
         color: #ec1d23;
@@ -55,6 +44,7 @@
 @media #{$screen-xs-only} {
     .navbar {
         opacity: 1;
+        height: 50px;
         .navbar-toggle {
             margin-right: 10px
         }
@@ -68,12 +58,18 @@
                 }
             }
         }
+        .navbar-header {
+            img {
+                max-height: 50px;
+            }
+        }
     }
 }
 
 @media #{$screen-sm-only} {
     .navbar {
         opacity: 1;
+        height: 50px;
         .navbar-toggle {
             margin-right: 10px
         }
@@ -85,6 +81,11 @@
                 a {
                     padding: 10px 15px;
                 }
+            }
+        }
+        .navbar-header {
+            img {
+                max-height: 50px;
             }
         }
     }
