--- a/app/views/blocks/header.jade
+++ b/app/views/blocks/header.jade
@@ -28,25 +28,25 @@ header
         li(data-target='#myCarousel', data-slide-to='2')      
     .carousel-inner(role='listbox')
       .item.active
-        img.first-slide(alt='First slide', data-interchange='[images/img-home/img-home-mb-banner.png,images/img-home/img-home-banne.png]')
+        img.first-slide(src='images/img-home/img-home-banne.png', alt='First slide', data-interchange='[images/img-home/img-home-mb-banner.png,images/img-home/img-home-banne.png]')
         .container
           .carousel-caption
-            h1 CĂNG DA MẶT
-            p.hidden-xs.hidden-sm Trang thiết bị tối tân,không gian là sự hòa quyện giữ vẻ lãng mạn,sang trọng
+            h1.text-left CĂNG DA MẶT
+            p.text-left.hidden-xs.hidden-sm Trang thiết bị tối tân,không gian là sự hòa quyện giữ vẻ lãng mạn,sang trọng
               | của phong cách Pháp và cảm giác ấm cũng như ở nhà, cùng không gian xanh mang hơi thở của thiên nhiên ngay giữa lòng thành phố.
       .item
         img.second-slide(alt='Second slide', data-interchange='[images/img-home/img-home-mb-banner.png,images/cangdamat-header-image.png]')
         .container
           .carousel-caption
-            h1 CĂNG DA MẶT
-            p.hidden-xs.hidden-sm Trang thiết bị tối tân,không gian là sự hòa quyện giữ vẻ lãng mạn,sang trọng
+            h1.text-left CĂNG DA MẶT
+            p.text-left.hidden-xs.hidden-sm Trang thiết bị tối tân,không gian là sự hòa quyện giữ vẻ lãng mạn,sang trọng
               | của phong cách Pháp và cảm giác ấm cũng như ở nhà, cùng không gian xanh mang hơi thở của thiên nhiên ngay giữa lòng thành phố.    
       .item
         img.third-slide(alt='Third slide', data-interchange='[images/img-home/img-home-mb-banner.png,images/img-ct/img-ct01.png]')
         .container
           .carousel-caption
-            h1 CĂNG DA MẶT
-            p.hidden-xs.hidden-sm Trang thiết bị tối tân,không gian là sự hòa quyện giữ vẻ lãng mạn,sang trọng
+            h1.text-left CĂNG DA MẶT
+            p.text-left.hidden-xs.hidden-sm Trang thiết bị tối tân,không gian là sự hòa quyện giữ vẻ lãng mạn,sang trọng
               | của phong cách Pháp và cảm giác ấm cũng như ở nhà, cùng không gian xanh mang hơi thở của thiên nhiên ngay giữa lòng thành phố.    
     a.left.carousel-control(href='#myCarousel', role='button', data-slide='prev')
       span.glyphicon.glyphicon-chevron-left(aria-hidden='true')
