--- a/app/views/blocks/home-content.jade
+++ b/app/views/blocks/home-content.jade
@@ -92,33 +92,45 @@
             a(href="#") Tại sao Hiền Thục lại trẻ lại trẻ lâu đến vậy?
     //- img.image-hover.img-responsive.visible-md.visible-lg(src="images/img-home/img-hp09.png", alt="images")
     .row.img-footer-block.visible-md.visible-lg
-      .col-md-3
-        img.image-hover.img-responsive(src="images/img-home/img-ft1.png", alt="images")
-      .col-md-3
-        img.image-hover.img-responsive(src="images/img-home/img-ft2.png", alt="images")
-      .col-md-3
-        img.image-hover.img-responsive(src="images/img-home/img-ft3.png", alt="images")
-      .col-md-3
-        img.image-hover.img-responsive(src="images/img-home/img-back-groud.png", alt="images")
+      .col-md-3.img-br
+        a(href="")
+          img.image-hover.img-responsive(src="images/img-home/img-ft1.png", alt="images")
+      .col-md-3.img-br
+        a(href="")
+          img.image-hover.img-responsive(src="images/img-home/img-ft2.png", alt="images")
+      .col-md-3.img-br
+        a(href="")
+          img.image-hover.img-responsive(src="images/img-home/img-ft3.png", alt="images")
+      .col-md-3.img-br
+        a(href="")
+          img.image-hover.img-responsive(src="images/img-home/img-back-groud.png", alt="images")
     .row.img-footer-block.visible-md.visible-lg
-      .col-md-3
-        img.image-hover.img-responsive(src="images/img-home/img-back-groud.png", alt="images")
-      .col-md-3
-        img.image-hover.img-responsive(src="images/img-home/img-ft4.png", alt="images")
-      .col-md-3
-        img.image-hover.img-responsive(src="images/img-home/img-ft5.png", alt="images")
-      .col-md-3
-        img.image-hover.img-responsive(src="images/img-home/img-ft6.png", alt="images")
+      .col-md-3.img-br
+        a(href="")
+          img.image-hover.img-responsive(src="images/img-home/img-back-groud.png", alt="images")
+      .col-md-3.img-br
+        a(href="")
+          img.image-hover.img-responsive(src="images/img-home/img-ft4.png", alt="images")
+      .col-md-3.img-br
+        a(href="")
+          img.image-hover.img-responsive(src="images/img-home/img-ft5.png", alt="images")
+      .col-md-3.img-br
+        a(href="")
+          img.image-hover.img-responsive(src="images/img-home/img-ft6.png", alt="images")
     //- img.image-hover.img-responsive.visible-xs(src="images/img-home/img-mb-hp07.png", alt="images")
     .row.img-footer-block.visible-xs.visible-sm
-      .col-xs-6
-        img.image-hover.img-responsive(src="images/img-home/img-mb-ft1.png", alt="images")
-      .col-xs-6
-        img.image-hover.img-responsive(src="images/img-home/img-mb-ft2.png", alt="images")
+      .col-xs-6.img-br
+        a(href="")
+          img.image-hover.img-responsive(src="images/img-home/img-mb-ft1.png", alt="images")
+      .col-xs-6.img-br
+        a(href="")
+          img.image-hover.img-responsive(src="images/img-home/img-mb-ft2.png", alt="images")
     .row.img-footer-block.visible-xs.visible-sm
-      .col-xs-6
-        img.image-hover.img-responsive(src="images/img-home/img-mb-ft4.png", alt="images")
-      .col-xs-6
-        img.image-hover.img-responsive(src="images/img-home/img-mb-ft3.png", alt="images")
+      .col-xs-6.img-br
+        a(href="")
+          img.image-hover.img-responsive(src="images/img-home/img-mb-ft4.png", alt="images")
+      .col-xs-6.img-br
+        a(href="")
+          img.image-hover.img-responsive(src="images/img-home/img-mb-ft3.png", alt="images")
 
 
