--- a/app/styles/_common.scss
+++ b/app/styles/_common.scss
@@ -244,3 +244,31 @@ a {
         min-height: 320px;
     }
 }
+.img-footer-block {
+    a::after{
+        content: "";
+        width: 100%;
+        height: 100%;
+        position: absolute;
+        top: 0;
+        left: 0;
+        display: block;
+        background: rgba(0,0,0,0);
+        z-index: 2;
+        transition: all ease-in-out .3s;
+        -moz-transition: all ease-in-out .3s;
+        -ms-transition: all ease-in-out .3s;
+        -o-transition: all ease-in-out .3s;
+        -webkit-transition: all ease-in-out .3s
+    }
+    .img-br:hover > a::after {
+        background: rgba(69, 69, 69, 0.8);
+    }
+}
+@media screen and (max-width: 768px) {
+  .img-footer-block {
+      .img-br:hover > a::after {
+          background: rgba(255, 231, 231, 0.8);
+      }
+  }
+}
