--- a/app/styles/_common.scss
+++ b/app/styles/_common.scss
@@ -243,9 +243,15 @@ a {
     .bounce-up {
         min-height: 320px;
     }
+    // .img-footer-block {
+    //     .img-br:hover > a::after {
+    //         background: rgba(255, 231, 231, 0.8);
+    //     }
+    // }
 }
+
 .img-footer-block {
-    a::after{
+    a::after {
         content: "";
         width: 100%;
         height: 100%;
@@ -253,7 +259,7 @@ a {
         top: 0;
         left: 0;
         display: block;
-        background: rgba(0,0,0,0);
+        background: rgba(0, 0, 0, 0);
         z-index: 2;
         transition: all ease-in-out .3s;
         -moz-transition: all ease-in-out .3s;
@@ -265,10 +271,25 @@ a {
         background: rgba(69, 69, 69, 0.8);
     }
 }
+
 @media screen and (max-width: 768px) {
-  .img-footer-block {
-      .img-br:hover > a::after {
-          background: rgba(255, 231, 231, 0.8);
-      }
-  }
+    .img-footer-block {
+        .img-br:hover > a::after {
+            background: rgba(255, 231, 231, 0.8);
+        }
+    }
+    .carousel-control.right {
+        background-image : initial;
+    }
+    .carousel-control.left {
+        background-image : initial;   
+    }
+}
+
+@media screen and (max-width: 970px) {
+    .img-footer-block {
+        .img-br:hover > a::after {
+            background: rgba(255, 231, 231, 0.8);
+        }
+    }
 }
